force-app/main/default/objects/Master_Job__c/fields/AfterHoursUpdate__c.field-meta.xml
<CustomField>
    <fullName>AfterHoursUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AfterHoursUpdate</label>
    <type>Checkbox</type>
</CustomField>