force-app/main/default/objects/Master_Job__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <summarizedField>ATI_Job__c.Amount__c</summarizedField>
    <summaryForeignKey>ATI_Job__c.Master_Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>