force-app/main/default/objects/Master_Job__c/fields/Approval_Error__c.field-meta.xml
<CustomField>
    <fullName>Approval_Error__c</fullName>
    <label>Approval Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>