force-app/main/default/objects/Master_Job__c/fields/Branch_Manager__c.field-meta.xml
<CustomField>
    <fullName>Branch_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Master_Jobs1</relationshipName>
    <type>Lookup</type>
</CustomField>