force-app/main/default/objects/Master_Job__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Campaign Source</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Master Jobs</relationshipLabel>
    <relationshipName>Master_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>