force-app/main/default/objects/Master_Job__c/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <label>Claim #</label>
    <length>45</length>
    <type>Text</type>
</CustomField>