force-app/main/default/objects/Master_Job__c/fields/Credit_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Request_Status__c</fullName>
    <description>Status set in Credit Request Approval Process</description>
    <label>Credit Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unapproved</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>