force-app/main/default/objects/Master_Job__c/fields/Credit_Request_Submitter_Email__c.field-meta.xml
<CustomField>
    <fullName>Credit_Request_Submitter_Email__c</fullName>
    <description>Credit Request submitter email population</description>
    <label>Credit Request Submitter Email</label>
    <type>Email</type>
</CustomField>