force-app/main/default/objects/Master_Job__c/fields/Demolition_Job_Count__c.field-meta.xml
<CustomField>
    <fullName>Demolition_Job_Count__c</fullName>
    <label>Demolition Job Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>