force-app/main/default/objects/Master_Job__c/fields/Description_of_Loss__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Loss__c</fullName>
    <label>Description of Loss</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>