force-app/main/default/objects/Master_Job__c/fields/Force_Master_Job_Sync__c.field-meta.xml
<CustomField>
    <fullName>Force_Master_Job_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Force Master Job Sync</label>
    <type>Checkbox</type>
</CustomField>