force-app/main/default/objects/Master_Job__c/fields/Job_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Job_Address_Line_1__c</fullName>
    <formula>Property__r.Address_Line_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Site Address Line 1</label>
    <type>Text</type>
</CustomField>