force-app/main/default/objects/Master_Job__c/fields/Job_Category__c.field-meta.xml
<CustomField>
    <fullName>Job_Category__c</fullName>
    <label>Job Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hurricane Florence</fullName>
            </value>
            <value>
                <fullName>Hurricane Harvey</fullName>
            </value>
            <value>
                <fullName>Hurricane Irma</fullName>
            </value>
            <value>
                <fullName>Napa Earthquake</fullName>
            </value>
            <value>
                <fullName>AZ 0914 Monsoon</fullName>
            </value>
            <value>
                <fullName>Wine Country Fires</fullName>
            </value>
            <value>
                <fullName>2019 Saddle Ridge/LA Fire</fullName>
            </value>
            <value>
                <fullName>2019 TIck/LA Fire</fullName>
            </value>
            <value>
                <fullName>Wildfires</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>