force-app/main/default/objects/Master_Job__c/fields/Job_Split__c.field-meta.xml
<CustomField>
    <fullName>Job_Split__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To be used for Job Splits created to divide Revenue between 2 offices or 2 PD&apos;s, both master jobs must relate to one another</description>
    <inlineHelpText>To be used for Job Splits created to divide Revenue between 2 offices or 2 PD&apos;s, both master jobs must relate to one another</inlineHelpText>
    <label>Job Split</label>
    <referenceTo>Master_Job__c</referenceTo>
    <relationshipLabel>Master Jobs</relationshipLabel>
    <relationshipName>Master_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>