force-app/main/default/objects/Master_Job__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advertising and Publications</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Building Consultant</fullName>
            </value>
            <value>
                <fullName>Consulting Firm</fullName>
            </value>
            <value>
                <fullName>Employee - Friends or Family Referral</fullName>
            </value>
            <value>
                <fullName>Environmental Hygienist</fullName>
            </value>
            <value>
                <fullName>Facilities Management/Building Engineer</fullName>
            </value>
            <value>
                <fullName>General Contractor</fullName>
            </value>
            <value>
                <fullName>Government or Municipality</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Independent Adjusting Company</fullName>
            </value>
            <value>
                <fullName>Insurance Agent</fullName>
            </value>
            <value>
                <fullName>Insurance Broker</fullName>
            </value>
            <value>
                <fullName>Insurance Company</fullName>
            </value>
            <value>
                <fullName>Live Chat</fullName>
            </value>
            <value>
                <fullName>National Account (ERA, Contract, Etc)</fullName>
            </value>
            <value>
                <fullName>Program - Alacrity Consumer Services</fullName>
            </value>
            <value>
                <fullName>Program - Alacrity REO</fullName>
            </value>
            <value>
                <fullName>Program - Alacrity Services</fullName>
            </value>
            <value>
                <fullName>Program - American Emergency Services</fullName>
            </value>
            <value>
                <fullName>Program - BrightServ</fullName>
            </value>
            <value>
                <fullName>Program - CC Consumer Services</fullName>
            </value>
            <value>
                <fullName>Program - Code Blue Network</fullName>
            </value>
            <value>
                <fullName>Program - Contractor Connection</fullName>
            </value>
            <value>
                <fullName>Program - Direct Assignment</fullName>
            </value>
            <value>
                <fullName>Program - Direct Claims Management (DCMG)</fullName>
            </value>
            <value>
                <fullName>Program - IMACC</fullName>
            </value>
            <value>
                <fullName>Program - Innovation Property</fullName>
            </value>
            <value>
                <fullName>Program - Lionsbridge</fullName>
            </value>
            <value>
                <fullName>Program - NEXXUS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>