force-app/main/default/objects/Master_Job__c/fields/Major_Event__c.field-meta.xml
<CustomField>
    <fullName>Major_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Major Event</label>
    <referenceTo>Major_Event__c</referenceTo>
    <relationshipLabel>Master Jobs</relationshipLabel>
    <relationshipName>Master_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>