force-app/main/default/objects/Master_Job__c/fields/Master_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Master_Job_Id__c</fullName>
    <label>Master Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>