force-app/main/default/objects/Master_Job__c/fields/Master_Property_Mismatch__c.field-meta.xml
<CustomField>
    <fullName>Master_Property_Mismatch__c</fullName>
    <formula>LEFT(Name, 5) &lt;&gt;  LEFT(Property__r.Name, 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Property Mismatch</label>
    <type>Checkbox</type>
</CustomField>