force-app/main/default/objects/Master_Job__c/fields/ML_Amount__c.field-meta.xml
<CustomField>
    <fullName>ML_Amount__c</fullName>
    <label>ML Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>