force-app/main/default/objects/Master_Job__c/fields/ML_Recording_Date__c.field-meta.xml
<CustomField>
    <fullName>ML_Recording_Date__c</fullName>
    <label>ML Recording Date</label>
    <type>Date</type>
</CustomField>