force-app/main/default/objects/Master_Job__c/fields/ML_Recording_Number__c.field-meta.xml
<CustomField>
    <fullName>ML_Recording_Number__c</fullName>
    <label>ML Recording Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>