force-app/main/default/objects/Master_Job__c/fields/ML_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>ML_Request_Date__c</fullName>
    <label>ML Request Date</label>
    <type>Date</type>
</CustomField>