force-app/main/default/objects/Master_Job__c/fields/Multiple_Divisions__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Divisions__c</fullName>
    <description>Field to note what other services the customer might be interested in.</description>
    <label>Interested Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asbestos</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Demolition</fullName>
            </value>
            <value>
                <fullName>Emergency Svces</fullName>
            </value>
            <value>
                <fullName>Contents</fullName>
            </value>
            <value>
                <fullName>Microbial</fullName>
            </value>
            <value>
                <fullName>Biohazard</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Catastrophes</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Technical Svces</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>