force-app/main/default/objects/Master_Job__c/fields/National_Account__c.field-meta.xml
<CustomField>
    <fullName>National_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>National Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Master Jobs (National Account)</relationshipLabel>
    <relationshipName>Master_Jobs1</relationshipName>
    <type>Lookup</type>
</CustomField>