force-app/main/default/objects/Master_Job__c/fields/PN_Amount__c.field-meta.xml
<CustomField>
    <fullName>PN_Amount__c</fullName>
    <label>PN Amount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>