force-app/main/default/objects/Master_Job__c/fields/PN_Recording_Date__c.field-meta.xml
<CustomField>
    <fullName>PN_Recording_Date__c</fullName>
    <label>PN Recording Date</label>
    <type>Date</type>
</CustomField>