force-app/main/default/objects/Master_Job__c/fields/PN_Recording_Number__c.field-meta.xml
<CustomField>
    <fullName>PN_Recording_Number__c</fullName>
    <label>PN Recording Number</label>
    <type>TextArea</type>
</CustomField>