force-app/main/default/objects/Master_Job__c/fields/PN_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>PN_Request_Date__c</fullName>
    <label>PN Request Date</label>
    <type>Date</type>
</CustomField>