force-app/main/default/objects/Master_Job__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <label>Policy</label>
    <length>50</length>
    <type>Text</type>
</CustomField>