force-app/main/default/objects/Master_Job__c/fields/Project_Site_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Project_Site_Address_2__c</fullName>
    <label>Project Site Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>