force-app/main/default/objects/Master_Job__c/fields/Project_Site_City__c.field-meta.xml
<CustomField>
    <fullName>Project_Site_City__c</fullName>
    <formula>Property__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Site City</label>
    <type>Text</type>
</CustomField>