force-app/main/default/objects/Master_Job__c/fields/Project_Site_State__c.field-meta.xml
<CustomField>
    <fullName>Project_Site_State__c</fullName>
    <formula>Property__r.State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Site State</label>
    <type>Text</type>
</CustomField>