force-app/main/default/objects/Master_Job__c/fields/Send_Prelim__c.field-meta.xml
<CustomField>
    <fullName>Send_Prelim__c</fullName>
    <label>Send Prelim</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>