force-app/main/default/objects/Master_Job__c/fields/Send_Prelim_Last_Modified_Date_Time1__c.field-meta.xml
<CustomField>
    <fullName>Send_Prelim_Last_Modified_Date_Time1__c</fullName>
    <label>Send Prelim Last Modified Date/Time</label>
    <type>DateTime</type>
</CustomField>