force-app/main/default/objects/Master_Job__c/fields/Send_Prelim_Last_Modified_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Send_Prelim_Last_Modified_Date_Time__c</fullName>
    <label>Send Prelim Last Modified by</label>
    <length>100</length>
    <type>Text</type>
</CustomField>