force-app/main/default/objects/Master_Job__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-work</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Post work</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Billing Complete</fullName>
                <isActive>false</isActive>
                <label>Billing Complete</label>
            </value>
            <value>
                <fullName>Estimating/Review</fullName>
                <isActive>false</isActive>
                <label>Estimating/Review</label>
            </value>
            <value>
                <fullName>Lost</fullName>
                <isActive>false</isActive>
                <label>Lost</label>
            </value>
            <value>
                <fullName>Qualification</fullName>
                <isActive>false</isActive>
                <label>Qualification</label>
            </value>
            <value>
                <fullName>Won</fullName>
                <isActive>false</isActive>
                <label>Won</label>
            </value>
            <value>
                <fullName>Work Complete</fullName>
                <isActive>false</isActive>
                <label>Work Complete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>