force-app/main/default/objects/Master_Job__c/fields/Taken_By__c.field-meta.xml
<CustomField>
    <fullName>Taken_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Taken By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Master_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>