force-app/main/default/objects/Master_Job__c/fields/Technical_Services_Job_Count__c.field-meta.xml
<CustomField>
    <fullName>Technical_Services_Job_Count__c</fullName>
    <label>Technical Services Job Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>