force-app/main/default/objects/Master_Job__c/fields/Type_of_Loss__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Loss__c</fullName>
    <label>Type of Loss</label>
    <length>100</length>
    <type>Text</type>
</CustomField>