force-app/main/default/objects/Master_Job__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <label>Zip</label>
    <length>50</length>
    <type>Text</type>
</CustomField>