force-app/main/default/objects/Master_Job__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Date_of_Loss__c</columns>
    <columns>Date_Time_Taken__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>