force-app/main/default/objects/Master_Job__c/listViews/Contact_Center_Intake_Master_Job.listView-meta.xml
<ListView>
    <fullName>Contact_Center_Intake_Master_Job</fullName>
    <filterScope>Queue</filterScope>
    <label>Contact Center - Intake</label>
    <queue>Contact_Center_Intake</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>