force-app/main/default/objects/Master_Job__c/listViews/Hybrid_PD_Master_Job.listView-meta.xml
<ListView>
    <fullName>Hybrid_PD_Master_Job</fullName>
    <filterScope>Queue</filterScope>
    <label>Hybrid PD</label>
    <queue>Hybrid_PD</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>