force-app/main/default/objects/Master_Job__c/listViews/NCLS_Executive_Approvers_Master_Job.listView-meta.xml
<ListView>
    <fullName>NCLS_Executive_Approvers_Master_Job</fullName>
    <filterScope>Queue</filterScope>
    <label>NCLS Executive Approvers</label>
    <queue>NCLS_Executive_Approvers</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>