force-app/main/default/objects/Master_Job__c/listViews/NCLS_Team_Master_Job.listView-meta.xml
<ListView>
    <fullName>NCLS_Team_Master_Job</fullName>
    <filterScope>Queue</filterScope>
    <label>NCLS Team</label>
    <queue>NCLS_Team</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>